src/test/ui/associated-types/associated-type-projection-from-supertrait.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/associated-type-projection-from-supertrait.rs:27:10
   |
LL | fn b() { dent(ModelT, Blue); }
   |          ^^^^^------^^^^^^^
   |               |
   |               expected `_`, found `ModelT`
   |
note: function defined here
  --> $DIR/associated-type-projection-from-supertrait.rs:25:4
   |
LL | fn dent<C:Car>(c: C, color: C::Color) { c.chip_paint(color) }
   |    ^^^^        ----  ---------------
help: provide an argument of the correct type
   |
LL | fn b() { dent(ModelT, {Black}); }
   |          ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/associated-type-projection-from-supertrait.rs:28:10
   |
LL | fn c() { dent(ModelU, Black); }
   |          ^^^^^------^^^^^^^^
   |               |
   |               expected `_`, found `ModelU`
   |
note: function defined here
  --> $DIR/associated-type-projection-from-supertrait.rs:25:4
   |
LL | fn dent<C:Car>(c: C, color: C::Color) { c.chip_paint(color) }
   |    ^^^^        ----  ---------------
help: provide an argument of the correct type
   |
LL | fn c() { dent(ModelU, {Blue}); }
   |          ^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/associated-type-projection-from-supertrait.rs:32:17
   |
LL | fn f() { ModelT.chip_paint(Blue); }
   |                 ^^^^^^^^^^ ---- expected `Black`, found `Blue`
   |
note: associated function defined here
  --> $DIR/associated-type-projection-from-supertrait.rs:12:8
   |
LL |     fn chip_paint(&self, c: Self::Color) { }
   |        ^^^^^^^^^^ -----  --------------
help: provide an argument of the correct type
   |
LL | fn f() { ModelT.chip_paint({Black})(Blue); }
   |                 ^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/associated-type-projection-from-supertrait.rs:33:17
   |
LL | fn g() { ModelU.chip_paint(Black); }
   |                 ^^^^^^^^^^ ----- expected `Blue`, found `Black`
   |
note: associated function defined here
  --> $DIR/associated-type-projection-from-supertrait.rs:12:8
   |
LL |     fn chip_paint(&self, c: Self::Color) { }
   |        ^^^^^^^^^^ -----  --------------
help: provide an argument of the correct type
   |
LL | fn g() { ModelU.chip_paint({Blue})(Black); }
   |                 ^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
